--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,8 @@
 server:
   port: 8000
 spring:
+  main:
+    web-application-type: reactive
   application:
     name: apigateway-service
   config:
@@ -14,3 +16,12 @@ management:
         include:
           - "refresh"
           - "bus-refresh"
+
+cookie:
+  refresh:
+    http:
+      domain: http://localhost:8000
+    token:
+      name: refresh-cookie
+
+
