--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,7 +11,7 @@ spring:
   main:
     web-application-type: reactive
   redis:
-    host: redis
+    host: localhost
     port: 6379
     password: 123456
 
